Fri Apr  3 01:26:48 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* bin/mj_shell (parse_command): Use WTMPDIR for user-owner
 	temporaries.

	* Makefile.PL (configure): Query for wtmpdir.

	* installbin: Expand WTMPDIR.

Thu Apr  2 20:18:13 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* postinstall (create_dirs): Create sessions directory so that we
 	can run mj_shell (to create the sessions directory).

	* Makefile.PL (check_prereq): Return a value indicating any
 	problems.

Wed Apr  1 00:36:00 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Format.pm (who): Pass regexp properly.

	* lib/Majordomo.pm (who_chunk): Skip addresses matching regexp.

	* lib/Mj/TextOutput.pm (who): Pass arguments in.

	* lib/Mj/Resend.pm (_post): Pass sequence number to
 	Mailout::deliver.

	* lib/Mj/MailOut.pm (deliver): Take sequence number as an
 	argument, since the confg file is unreliable at this point.

	* lib/Mj/Deliver.pm (deliver): Do extended sender manipulation if
 	asked.

	* lib/Bf/Sender.pm (M_probe_sender): Strip any existing mailbox
 	stuff before adding our own.

	* lib/Mj/MailOut.pm (deliver): Set 'manip' flag.

Tue Mar 31 01:29:20 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm: Noted places where i18n must happen.

	* lib/mj_cf_data.pl: Update docs for message_headers (add seqno)
 	and subject_prefix (add seqno and remove sender).

	* lib/Mj/Resend.pm (_post): Update the sequence number atomically.

Mon Mar 30 00:26:02 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm (config_lock): New.
	(config_unlock): New.

	* lib/Majordomo.pm (_list_config_lock): New.
	(_list_config_unlock): New.

	* lib/Mj/Config.pm (lock): New function to lock the config file.
	(unlock): Do the opposite.
	(DESTROY): Now just unlock instead of save; unlocking will
 	automatically save if needed.
	(set): Automatically lock if needed.

	* lib/Mj/TextOutput.pm (configshow): Comment out automatic