@@ -15,9 +15,6 @@ Switch over one of my lists.  (How?  Manually maintain subscription
 Top of the list 
 ---------------
 
-! Add install stuff to get mj_confirm placed in the proper directory.  Need
-  to know location of cgi-bin directory.  postinstall can do a copy there.
-
 ! Make sure all sent mails have To: headers.
 
 ! Have dispatch or log add info about what's being done to the stored
@@ -240,6 +237,107 @@ Well thought out stuff:
 
   The default English translations can be placed in the code and used on
   the client side.
+
+- Daemon model.  Startup time is always going to plague us.  The solution
+  is to eliminate it.  Have daemons run in the background as necessary to
+  serve requests.
+
+  In the temp directory, have one directory per domain.  In that directory,
+  have a file containing the number of simultaneous daemons allowed.  The
+  client can look for daemons by Unix domain sockets there.  It should
+  select on all available and if it times out (or there aren't any to begin
+  with) it should spawn them.  It will never spawn more than the maximum.
+
+  A daemon just select on its socket until it hits a connection, then it
+  accepts and talks client-server over the socket to do things.  If the
+  select times out, the daemon can exit, taking its socket with it.  This
+  limits the number of daemons to what is needed.
+
+  The clients should be small, so that they compile quickly.
+
+  Client looks like normal; everything is in the Majordomo module.  A
+  global can be consulted to do C/S or monolithic; the Majordomo module can
+  itself use Mj::Client or Mj::Core.
+
+  Daemon just calks Mj::Protocol, calls routines on its $mj and passes the
+  results back to Mj::Protocol.
+
+  A Mj::Protocol module can implement the C/S protocol, which should look
+  sort of like SMTP.  A transaction (from the view of the client) looks like:
+
+  >> CONN
+  << 30 OK; need: data, interface
+  >> ARG data
+  << 31 OK, send
+  >> +Connection data line w
+  >> +Line 1
+  >> +Whatever
+  >>
+  << 31 Received arg data; still need interface
+  >> ARG interface
+  
+  << 20 Connection received; ID follows
+  << 21
+  << 22-1234132BCDAF23432ED245AB
+  << 22
+  << 23 End of return values
+  >> UTIL get_all_lists
+  << 30 Command received; need user, pass, interface
+
+
+  Client sends four-letter mnemonic strings, many having (optional)
+  arguments.  Server sends numeric result codes.  (This is asymmetrical
+  because server needs to be chatty and thus needs a way to communicate
+  return values.)
+
+  Call sequence:  DISP/UTIL, ARG (name), ..., ARG (name), ..., END
+  Return sequence: 20, 21 (name), 22..., 21 (name), 22..., 23
+ 
+  20: printed after all arguments received, contains status message.
+  21: return value follows, gives name
+  22: return value
+  23: end of return values
+
+  30: got yor command, want some arguments
+  31: Send the argument
+  32: got the argument
+  33: got all arguments you sent.
+
+  (codes beginning with 1 could be used to provoke an answer from the UI.)
+
+  START:    connection, takes optional session key
+  COMMAND:  call the dispatcher on the given core function name
+  UTILITY:  call the named utility function
+  QUIT:     close the connection
+  DIE:      have the daemon exit
+  ARGUMENT: named (or unnamed) argument follows
+  LINE:     here comes a line of data
+  END:      all arguments sent
+
+  (only the first two characters are significant)
+
+  A "+" endicates an appended newline that should be preserved.  A '-'
+  indicates a value with no newline.  A blank is the universal "end of
+  transaction indicator".  A line with a blank is assumed to be _not_
+  newline terminated.  An empty line (cuntaining just a newline) is just
+  '+', a completely empty string is just '-'.  (In other words, to print
+  newline-terminated strings, chomp, then print "+$string" for each line.)
+  This is much like SMTP, in that you can parse until the first character
+  after the code is a space.  A return code with nothing following it is
+  required to terminate a newline-terminated string.
+
+  Arguments are communicated to the server with ARG commands; these
+  optionally take a name for named args.  Args are transmitted one at a
+  time until all are sent.  There is no fixed limit on the number of
+  arguments.
+
+  This enables names arguments to be sent as easily as passing a hash.
+  This means that lots of things can be rewritten in a much simpler manner
+  now.  Drat.
+
+  The utility/dispatch difference serves to reinfoces the distinction
+  between these types of functions; dispatch functions all take the same
+  arguments.
 
 - mj_resend should go through the dispatcher and use the iterative
   interface instead of the direct post function.
