@@ -3,10 +3,10 @@ BEGIN {
   $::LIBDIR = "/path/to/lib";
   $::LISTDIR= "/path/to/lists";
   $::DEFDOM = "some.dom.ain";
-  $::TMPDIR = "/tmp";
   $::WTMPDIR= "/tmp";
   $::UID    = "baduid";
   $::GID    = "badgid";
+#  $::TMPDIR = "/tmp";
 #  $Exporter::Verbose = 1;
 #  $AutoLoader::Verbose = 1;
 #  $AutoLoader::Notruncate = 1;
