@@ -1,3 +1,15 @@
+Mon Apr  6 00:00:13 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
+
+	* postinstall (copy_file): New function.  Call copy_file to put
+ 	mj_confirm in the proper place if cgi_bin is set in the startup
+ 	configuration.
+
+	* Makefile.PL (configure): Add questions about cgi_bin directory.
+
+Sun Apr  5 23:59:55 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
+
+	* bin/mj_shell: Removed now spurious reference to TMPDIR.
+
 Fri Apr  3 01:26:48 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
 
 	* bin/mj_shell (parse_command): Use WTMPDIR for user-owner
